# nehrp_priors

./: .gitignore  Gear1.py  Helmstetter.py  README.md  USGS_NSHM.py  __init__.py  compare_priors.py  prior_model.py  pyproject.toml
data/: GEAR1_prior.tt3  USGS_NSHM_prior.tt3  helmstetter_prior.tt3
legacy/: Gear1.py  Helmstetter.py  USGS_NSHM.py  __init__.py  functions.py
scripts/: compare_priors.py  test_etas_updater.py
src/: __init__.py  prior_model.py
src/priors/: __init__.py  prior_model.py  time_dependent.py
